--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scr
 short = []
 # printout the layout of circuits for demo and some unittests
 print_layout = ["halo2_proofs/dev-graph"]
+legacy = []
 
 [dev-dependencies]
 rand = "0.8"
