--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.gi
 lazy_static = "1.4.0"
 thiserror = "1.0"
 bitvec = "1"
+rand_xorshift = "0.3.0"
+rand = "0.8"
 
 [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
 halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0220" }
