parallel_syn env var and feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,13 @@ rand = "0.8"
 halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
 
 [features]
-default = ["halo2_proofs/parallel_syn","short"]
+default = ["parallel_syn", "short"]
 # Use an implementation using fewer rows (8) per permutation.
 short = []
 # printout the layout of circuits for demo and some unittests
 print_layout = ["halo2_proofs/dev-graph"]
 legacy = []
+parallel_syn = ["halo2_proofs/parallel_syn"]
 
 [dev-dependencies]
 rand = "0.8"
