--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ rand_xorshift = "0.3.0"
 rand = "0.8"
 
 [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
-halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "sync-ff-0.13" }
+halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
 
 [features]
 default = ["halo2_proofs/parallel_syn", "short"]
