--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -8,9 +8,12 @@ lazy_static.workspace = true
 bitvec.workspace = true
 halo2curves.workspace = true
 
+subtle = { workspace = true, optional = true}
+
 [dev-dependencies]
 subtle.workspace = true
 
 [features]
 default = ["short"]
 short = []
+test = ["subtle"]
