--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ resolver = "2"
 bencher = "0.1"
 bitvec = "1"
 ff = "0.13"
-halo2curves = { git = "https://github.com/kunxian-xia/halo2curves.git", branch = "feat/sp1", features = [ "derive_serde" ] }
+halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
 lazy_static = "1.4"
 log = "0.4"
@@ -25,9 +25,8 @@ opt-level = 3
 debug-assertions = true
 
 [patch.crates-io]
-ff = { git = "https://github.com/scroll-tech/ff", rev = "7e94aa6" }
-[patch."https://github.com/kunxian-xia/halo2curves.git"]
-halo2curves = { git = "https://github.com/lightsing/halo2curves.git", branch = "feat/sp1" }
+ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1" }
+halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "feat/sp1" }
 
 [patch."https://github.com/privacy-scaling-explorations/halo2.git"]
 halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
