--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ resolver = "2"
 [workspace.dependencies]
 bencher = "0.1"
 bitvec = "1"
-ff = "0.13"
-halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
-halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
+ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1" }
+halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "feat/sp1" }
+halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.0" }
 lazy_static = "1.4"
 log = "0.4"
 plotters = "0.3"
