--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -9,10 +9,7 @@ bitvec.workspace = true
 halo2curves.workspace = true
 subtle.workspace = true
 sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0720", optional = true }
-sp1-lib-upstream = { package = "sp1-lib", git = "https://github.com/succinctlabs/sp1.git", tag = "v1.0.1", optional = true }
 
 [features]
 short = []
-zkvm-hint = []
-zkvm-hint-scroll = ["sp1-lib"]
-zkvm-hint-upstream = ["sp1-lib-upstream"]
+zkvm-hint = ["sp1-lib"]
