--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -8,6 +8,9 @@ lazy_static.workspace = true
 bitvec.workspace = true
 halo2curves.workspace = true
 subtle.workspace = true
+sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0720", optional = true }
 
 [features]
+default = ["short"]
 short = []
+zkvm-hint = ["sp1-lib"]
