--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -11,6 +11,6 @@ subtle.workspace = true
 sp1-lib = { git = "https://github.com/scroll-tech/sp1.git", branch = "scroll-dev-0720", optional = true }
 
 [features]
-default = ["short"]
+default = []
 short = []
 zkvm-hint = ["sp1-lib"]
