fix test and msrv 1.75

--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -7,7 +7,12 @@ edition = "2021"
 lazy_static.workspace = true
 bitvec.workspace = true
 halo2curves.workspace = true
+subtle = { workspace = true, optional = true }
+
+[dev-dependencies]
+subtle.workspace = true
 
 [features]
 default = ["short"]
 short = []
+test = ["subtle"]
