--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bitvec = "1"
 ff = "0.13"
 halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
+itertools = "0.13.0" # for compatibility msrv 1.75
 lazy_static = "1.4"
 log = "0.4"
 plotters = "0.3"
