--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ halo2curves = { version = "0.1.0", features = [ "derive_serde" ] }
 halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2022_09_10" }
 lazy_static = "1.4"
 log = "0.4"
+once_cell = "1.19"
 rand = "0.8"
 rand_chacha = "0.3.0"
 rand_xorshift = "0.3"
