--- a/poseidon-base/Cargo.toml
+++ b/poseidon-base/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 lazy_static.workspace = true
 bitvec.workspace = true
 halo2curves.workspace = true
+once_cell.workspace = true
 
 subtle = { workspace = true, optional = true}
 
