feat: cache init (#38)
* cache init

* add & fix test

* remove constants in Sponge

* fix short

* fix test

--- a/poseidon-circuit/Cargo.toml
+++ b/poseidon-circuit/Cargo.toml
@@ -26,10 +26,10 @@ parallel_syn = ["halo2_proofs/parallel_syn"]
 [dev-dependencies]
 bencher.workspace = true
 lazy_static.workspace = true
-plotters.workspace = true
 rand.workspace = true
 rand_chacha.workspace = true
 subtle.workspace = true
+poseidon-base = { path = "../poseidon-base", features = ["test"] }
 
 [[bench]]
 name = "hash"
