fix test and msrv 1.75 (#41)
* fix test and msrv 1.75

* fix conflicts

---------

Co-authored-by: Zhang Zhuo <mycinbrin@gmail.com>

--- a/poseidon-circuit/Cargo.toml
+++ b/poseidon-circuit/Cargo.toml
@@ -11,6 +11,7 @@ log.workspace = true
 poseidon-base = { path = "../poseidon-base" }
 rand_xorshift.workspace = true
 rand.workspace = true
+itertools.workspace = true
 
 [features]
 default = ["halo2_proofs/parallel_syn", "short"]
